--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -32,3 +32,6 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 
+models:
+  my_first_dbt_model:
+    +tags: "test"
