--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -28,6 +28,12 @@ clean-targets:         # directories to be removed by `dbt clean`
 # Configuring models
 # Full documentation: https://docs.getdbt.com/docs/configuring-models
 
+
+query-comment:
+  comment: "testing purposes"
+  append: true
+  job-label: true
+
 # In this example config, we tell dbt to build all models in the example/ directory
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
